--- a/performances.html
+++ b/performances.html
@@ -22,12 +22,12 @@
 </head>
 <body>
 
-<!-- ==================== HERO SECTION (FULL HEIGHT, CONTENT OVERLAY) ==================== -->
+<!-- ==================== HERO SECTION (BEHIND NAVBAR) ==================== -->
 <div class="hero-section position-relative">
   <img src="images/OscarandLucindaHero.jpg" class="hero-img" alt="Jeremy Kleeman on stage">
   <div class="hero-overlay"></div>
 
-  <!-- NAVBAR (floating, transparent → solid on scroll) -->
+  <!-- NAVBAR (your original, floating over hero) -->
   <nav class="navbar navbar-expand-md navbar-dark position-absolute top-0 start-0 w-100" style="z-index: 10;">
     <div class="container">
       <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
@@ -49,8 +49,8 @@
     </div>
   </nav>
 
-  <!-- UPCOMING SECTION (starts inside hero, high up) -->
-  <div class="container position-relative" style="z-index: 5; margin-top: -10vh;">
+  <!-- UPCOMING (inside hero, pulled up) -->
+  <div class="container position-relative" style="z-index: 5; margin-top: -15vh;">
     <h2 class="text-center mb-5 text-white section-title">Upcoming</h2>
 
     <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
@@ -67,7 +67,7 @@
               <p class="mb-1">Brisbane</p>
               <p class="mb-1">16 November 2025</p>
             </div>
-            <a href="#" class="more-info align-self-end">More info</a>
+            <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@
               <p class="mb-1">Palais Theatre</p>
               <p class="mb-1">June 30, July 2 &amp; 4, 2026</p>
             </div>
-            <a href="#" class="more-info align-self-end">More info</a>
+            <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
           </div>
         </div>
       </div>
@@ -111,7 +111,7 @@
             <p class="mb-1">Reardon Theatre</p>
             <p class="mb-1">12 October 2025</p>
           </div>
-          <a href="#" class="more-info align-self-end">More info</a>
+          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
@@ -129,7 +129,7 @@
             <p class="mb-1">Auckland Town Hall</p>
             <p class="mb-1">25 &amp; 26 September 2025</p>
           </div>
-          <a href="#" class="more-info align-self-end">More info</a>
+          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
     </div>
@@ -140,7 +140,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-<!-- Navbar scroll effect -->
+<!-- Navbar becomes solid on scroll -->
 <script>
   window.addEventListener('scroll', () => {
     const navbar = document.querySelector('.navbar');
