--- a/performances.html
+++ b/performances.html
@@ -22,79 +22,96 @@
 </head>
 <body>
 
-<!-- ==================== HERO SECTION (BEHIND NAVBAR) ==================== -->
-<div class="hero-section position-relative">
-  <img src="images/OscarandLucindaHero.jpg" class="hero-img" alt="Jeremy Kleeman on stage">
-  <div class="hero-overlay"></div>
-
-  <!-- NAVBAR (your original, floating over hero) -->
-  <nav class="navbar navbar-expand-md navbar-dark position-absolute top-0 start-0 w-100" style="z-index: 10;">
-    <div class="container">
-      <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-              aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <div class="container-fluid" style="padding-right:0;">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="biography.html">Biography</a></li>
-            <li class="nav-item"><a class="nav-link" href="media.html">Media</a></li>
-            <li class="nav-item"><a class="nav-link active" aria-current="page" href="performances.html">Performances</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-          </ul>
-        </div>
+<!-- ==================== NAVBAR ==================== -->
+<nav class="navbar navbar-expand-md navbar-dark">
+  <div class="container">
+    <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="container-fluid" style="padding-right:0;">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="biography.html">Biography</a></li>
+          <li class="nav-item"><a class="nav-link" href="media.html">Media</a></li>
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="performances.html">Performances</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
       </div>
     </div>
-  </nav>
+  </div>
+</nav>
 
-  <!-- UPCOMING (inside hero, pulled up) -->
-  <div class="container position-relative" style="z-index: 5; margin-top: -15vh;">
-    <h2 class="text-center mb-5 text-white section-title">Upcoming</h2>
-
-    <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
-
-      <!-- Performance 1 -->
-      <div class="col">
-        <div class="card perf-card h-100 border-0 text-center">
-          <div class="card-body d-flex flex-column justify-content-center p-4">
-            <h3 class="work-title mb-1"><i>Songs of Travel</i></h3>
-            <p class="composer mb-3">Vaughan Williams</p>
-            <h5 class="perf-role mb-3">Recital</h5>
-            <h6 class="company mb-3">Brisbane Music Festival</h6>
-            <div class="venue-date mb-3">
-              <p class="mb-1">Brisbane</p>
-              <p class="mb-1">16 November 2025</p>
-            </div>
-            <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
-          </div>
-        </div>
-      </div>
-
-      <!-- Performance 2 -->
-      <div class="col">
-        <div class="card perf-card h-100 border-0 text-center">
-          <div class="card-body d-flex flex-column justify-content-center p-4">
-            <h3 class="work-title mb-1"><i>Coronation of Poppea</i></h3>
-            <p class="composer mb-3">Monteverdi / Kats-Chernin</p>
-            <h5 class="perf-role mb-3">Ottone</h5>
-            <h6 class="company mb-3">Victorian Opera</h6>
-            <div class="venue-date mb-3">
-              <p class="mb-1">Palais Theatre</p>
-              <p class="mb-1">June 30, July 2 &amp; 4, 2026</p>
-            </div>
-            <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
-          </div>
-        </div>
-      </div>
-
+<!-- ==================== HERO SECTION (BELOW NAVBAR) ==================== -->
+<div class="hero-section">
+  <div class="hero-img-container">
+    <img src="images/OscarandLucindaHero.jpg" class="hero-img" alt="Jeremy Kleeman on stage">
+    <div class="hero-overlay"></div>
+  </div>
+  <div class="container position-relative">
+    <div class="hero-text text-center text-white py-5">
+      <h1 class="display-4 fw-bold mb-2">Performances</h1>
+      <p class="lead">Upcoming &amp; Recent</p>
     </div>
   </div>
 </div>
 
-<!-- ==================== RECENT (below hero) ==================== -->
+<!-- ==================== UPCOMING ==================== -->
 <div class="container my-5 sitetext">
+  <h2 class="text-center mb-5 text-white section-title">Upcoming</h2>
+
+  <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
+
+    <!-- Performance 1 -->
+    <div class="col">
+      <div class="card perf-card h-100 border-0 text-center">
+        <div class="card-body d-flex flex-column justify-content-center p-4">
+          <h3 class="work-title mb-1"><i>Songs of Travel</i></h3>
+          <p class="composer mb-3">Vaughan Williams</p>
+
+          <h5 class="perf-role mb-3">Recital</h5>
+
+          <h6 class="company mb-3">Brisbane Music Festival</h6>
+
+          <div class="venue-date mb-3">
+            <p class="mb-1">Brisbane</p>
+            <p class="mb-1">16 November 2025</p>
+          </div>
+
+          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Performance 2 -->
+    <div class="col">
+      <div class="card perf-card h-100 border-0 text-center">
+        <div class="card-body d-flex flex-column justify-content-center p-4">
+          <h3 class="work-title mb-1"><i>Coronation of Poppea</i></h3>
+          <p class="composer mb-3">Monteverdi / Kats-Chernin</p>
+
+          <h5 class="perf-role mb-3">Ottone</h5>
+
+          <h6 class="company mb-3">Victorian Opera</h6>
+
+          <div class="venue-date mb-3">
+            <p class="mb-1">Palais Theatre</p>
+            <p class="mb-1">June 30, July 2 &amp; 4, 2026</p>
+          </div>
+
+          <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- ==================== DIVIDER ==================== -->
+  <div class="section-divider"></div>
+
+  <!-- ==================== RECENT ==================== -->
   <h2 class="text-center mb-5 text-white section-title">Recent</h2>
 
   <div class="row row-cols-1 row-cols-md-2 g-5 justify-content-center">
@@ -105,12 +122,16 @@
         <div class="card-body d-flex flex-column justify-content-center p-4">
           <h3 class="work-title mb-1"><i>Eva</i> (world premiere)</h3>
           <p class="composer mb-3">Cassomenos</p>
+
           <h5 class="perf-role mb-3">Captain Gibb &amp; Hugh Gibson</h5>
+
           <h6 class="company mb-3">Port Fairy Spring Music Festival</h6>
+
           <div class="venue-date mb-3">
             <p class="mb-1">Reardon Theatre</p>
             <p class="mb-1">12 October 2025</p>
           </div>
+
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
@@ -122,13 +143,17 @@
         <div class="card-body d-flex flex-column justify-content-center p-4">
           <h3 class="work-title mb-1"><i>Stabat Mater</i></h3>
           <p class="composer mb-3">Rossini</p>
+
           <h5 class="perf-role mb-3">Bass Soloist</h5>
+
           <h6 class="company mb-3">New Zealand Symphony Orchestra</h6>
+
           <div class="venue-date mb-3">
             <p class="mb-1">Michael Fowler Centre, Wellington</p>
             <p class="mb-1">Auckland Town Hall</p>
             <p class="mb-1">25 &amp; 26 September 2025</p>
           </div>
+
           <a href="#" class="more-info align-self-end"><i class="bi bi-arrow-right-circle"></i> More info</a>
         </div>
       </div>
@@ -139,13 +164,5 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-
-<!-- Navbar becomes solid on scroll -->
-<script>
-  window.addEventListener('scroll', () => {
-    const navbar = document.querySelector('.navbar');
-    navbar.classList.toggle('scrolled', window.scrollY > 100);
-  });
-</script>
 </body>
 </html>
