--- a/index.html
+++ b/index.html
@@ -1,99 +1,132 @@
 <!DOCTYPE html>
-
 <html lang="en">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-        <link href="styles.css" rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-        <title>Jeremy Kleeman | Home</title>
-    </head>
-    <body>
-    <nav class="navbar navbar-expand-md navbar-dark ">
-        <div class="container">
-          <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <div class="container-fluid" style="padding-right:0px;">
-              <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="biography.html">Biography</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="media.html">Media</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="performances.html">Performances</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-            </div>
-          </div>
-        </div>
-    </nav>
-      <div class="container">
-        <!-- Content here -->
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="images/CosiOQ.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block rounded">
-                <h5><i>Così fan tutte</i> — Opera Queensland, 2023</h5>
-                <p>“Jeremy Kleeman as Guglielmo complements his golden voice with engaging acting throughout ... his self-congratulation was perfect” — Nicholas Routley, Australian Stage</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/FigaroSOSA2.jpg" class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block rounded">
-                <h5><i>Le nozze di Figaro</i> — State Opera of South Australia, 2023</h5>
-                <p>“Jeremy Kleeman is the perfect Figaro ... he brings youth and physical energy to the role. His baritone is velvety smooth, and he literally leaps around the stage alternatively causing and escaping trouble” — Barry Hill OAM, Stage Whispers</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="images/CorcoranSOSA.jpg" class="d-block w-100" alt="HMS Pinafore, Jeremy Kleeman and Antoinette Halloran">
-              <div class="carousel-caption d-none d-md-block rounded">
-                <h5><i>HMS Pinafore</i> — State Opera of South Australia, 2023</h5>
-                <p>“Jeremy Kleeman's wit, energy and constant focus power his performance. He can act, he can move and he can sing. From his surprise first appearance, when he declares “I am the captain of the Pinafore”, his vocal worth is evident, with clear, precise articulation and warmly resonant tone.  His Act 2 opener, “Fair moon, to thee I sing”, shows off his excellent legato line. Kleeman is a very fine artist” — Pat Wilson, Glam Adelaide</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-      <div class="container">
-      <div class="phonetext">
-        <br>
-        <p class="minititle"><i>Così fan tutte</i> — Opera Queensland, 2023</p>
-                <p>“Jeremy Kleeman as Guglielmo complements his golden voice with engaging acting throughout ... his self-congratulation was perfect” — Nicholas Routley, Australian Stage</p>
-        <br>
-        <p class="minititle"><i>Le nozze di Figaro</i> — State Opera of South Australia, 2023</p>
-                <p>“Jeremy Kleeman is the perfect Figaro ... he brings youth and physical energy to the role. His baritone is velvety smooth, and he literally leaps around the stage alternatively causing and escaping trouble” — Barry Hill OAM, Stage Whispers</p>
-        <br>
-        <p class="minititle"><i>HMS Pinafore</i> — State Opera of South Australia, 2023</p>
-                <p>“Jeremy Kleeman's wit, energy and constant focus power his performance. He can act, he can move and he can sing. From his surprise first appearance, when he declares “I am the captain of the Pinafore”, his vocal worth is evident, with clear, precise articulation and warmly resonant tone.  His Act 2 opener, “Fair moon, to thee I sing”, shows off his excellent legato line. Kleeman is a very fine artist” — Pat Wilson, Glam Adelaide</p>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Jeremy Kleeman | Home</title>
+
+  <!-- Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+  <!-- Bootstrap Icons (optional) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
+  <!-- Your CSS -->
+  <link href="styles.css" rel="stylesheet">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+</head>
+<body>
+
+<!-- ==================== NAVBAR ==================== -->
+<nav class="navbar navbar-expand-md navbar-dark">
+  <div class="container">
+    <a class="navbar-brand align-middle" href="index.html">Jeremy Kleeman</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="container-fluid" style="padding-right:0;">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" aria-current="page" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="biography.html">Biography</a></li>
+          <li class="nav-item"><a class="nav-link" href="media.html">Media</a></li>
+          <li class="nav-item"><a class="nav-link" href="performances.html">Performances</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
       </div>
     </div>
-    </body>
+  </div>
+</nav>
+
+<!-- ==================== HERO CAROUSEL ==================== -->
+<div class="container my-5">
+  <div id="reviewCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="8000">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+
+      <!-- Slide 1 -->
+      <div class="carousel-item active"
+           data-title="Così fan tutte — Opera Queensland, 2023"
+           data-quote="“Jeremy Kleeman as Guglielmo complements his golden voice with engaging acting throughout ... his self-congratulation was perfect” — Nicholas Routley, Australian Stage">
+        <img src="images/CosiOQ.jpg" class="d-block w-100" alt="Così fan tutte">
+        <div class="carousel-caption d-none d-md-block">
+          <h5><i>Così fan tutte</i> — Opera Queensland, 2023</h5>
+          <p>“Jeremy Kleeman as Guglielmo complements his golden voice with engaging acting throughout ... his self-congratulation was perfect” — Nicholas Routley, Australian Stage</p>
+        </div>
+      </div>
+
+      <!-- Slide 2 -->
+      <div class="carousel-item"
+           data-title="Le nozze di Figaro — State Opera of South Australia, 2023"
+           data-quote="“Jeremy Kleeman is the perfect Figaro ... he brings youth and physical energy to the role. His baritone is velvety smooth, and he literally leaps around the stage alternatively causing and escaping trouble” — Barry Hill OAM, Stage Whispers">
+        <img src="images/FigaroSOSA2.jpg" class="d-block w-100" alt="Le nozze di Figaro">
+        <div class="carousel-caption d-none d-md-block">
+          <h5><i>Le nozze di Figaro</i> — State Opera of South Australia, 2023</h5>
+          <p>“Jeremy Kleeman is the perfect Figaro ... he brings youth and physical energy to the role. His baritone is velvety smooth, and he literally leaps around the stage alternatively causing and escaping trouble” — Barry Hill OAM, Stage Whispers</p>
+        </div>
+      </div>
+
+      <!-- Slide 3 -->
+      <div class="carousel-item"
+           data-title="HMS Pinafore — State Opera of South Australia, 2023"
+           data-quote="“Jeremy Kleeman's wit, energy and constant focus power his performance. He can act, he can move and he can sing. From his surprise first appearance, when he declares “I am the captain of the Pinafore”, his vocal worth is evident, with clear, precise articulation and warmly resonant tone.  His Act 2 opener, “Fair moon, to thee I sing”, shows off his excellent legato line. Kleeman is a very fine artist” — Pat Wilson, Glam Adelaide">
+        <img src="images/CorcoranSOSA.jpg" class="d-block w-100" alt="HMS Pinafore">
+        <div class="carousel-caption d-none d-md-block">
+          <h5><i>HMS Pinafore</i> — State Opera of South Australia, 2023</h5>
+          <p>“Jeremy Kleeman's wit, energy and constant focus power his performance. He can act, he can move and he can sing. From his surprise first appearance, when he declares “I am the captain of the Pinafore”, his vocal worth is evident, with clear, precise articulation and warmly resonant tone.  His Act 2 opener, “Fair moon, to thee I sing”, shows off his excellent legato line. Kleeman is a very fine artist” — Pat Wilson, Glam Adelaide</p>
+        </div>
+      </div>
+
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#reviewCarousel" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#reviewCarousel" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <!-- ==================== MOBILE REVIEW TEXT (auto-filled from carousel) ==================== -->
+  <div class="container d-md-none phonetext mt-4">
+    <div id="mobileReview" class="text-center">
+      <!-- Filled by JS -->
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap JS (at end) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
+<!-- Auto-update mobile text -->
+<script>
+  const carousel = document.getElementById('reviewCarousel');
+  const mobileReview = document.getElementById('mobileReview');
+
+  function updateMobileReview() {
+    const activeItem = carousel.querySelector('.carousel-item.active');
+    const title = activeItem.getAttribute('data-title');
+    const quote = activeItem.getAttribute('data-quote');
+    mobileReview.innerHTML = `<p class="minititle"><i>${title.split(' — ')[0]}</i> — ${title.split(' — ')[1]}</p><p>${quote}</p><hr>`;
+  }
+
+  carousel.addEventListener('slid.bs.carousel', updateMobileReview);
+  updateMobileReview(); // Initial
+</script>
+
+</body>
 </html>
+
+
