--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
-  <!-- Bootstrap Icons (optional) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-
   <!-- Your CSS -->
   <link href="styles.css" rel="stylesheet">
 
@@ -45,49 +42,61 @@
 </nav>
 
 <!-- ==================== HERO CAROUSEL ==================== -->
-<div class="container my-5">
-  <div id="reviewCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="8000">
-    <div class="carousel-indicators">
-      <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+<div class="hero-carousel-container">
+  <div id="reviewCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="9000">
+    
+    <!-- Indicators -->
+    <div class="carousel-indicators custom-indicators">
+      <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="0" class="active" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
       <button type="button" data-bs-target="#reviewCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
+
+    <!-- Slides -->
     <div class="carousel-inner">
 
       <!-- Slide 1 -->
-      <div class="carousel-item active"
-           data-title="Così fan tutte — Opera Queensland, 2023"
-           data-quote="“Jeremy Kleeman as Guglielmo complements his golden voice with engaging acting throughout ... his self-congratulation was perfect” — Nicholas Routley, Australian Stage">
-        <img src="images/CosiOQ.jpg" class="d-block w-100" alt="Così fan tutte">
-        <div class="carousel-caption d-none d-md-block">
-          <h5><i>Così fan tutte</i> — Opera Queensland, 2023</h5>
-          <p>“Jeremy Kleeman as Guglielmo complements his golden voice with engaging acting throughout ... his self-congratulation was perfect” — Nicholas Routley, Australian Stage</p>
+      <div class="carousel-item active">
+        <picture>
+          <source media="(max-width: 767px)" srcset="images/CosiOQ-mobile.jpg">
+          <img src="images/CosiOQ.jpg" class="carousel-img" alt="Così fan tutte — Opera Queensland">
+        </picture>
+        <div class="review-caption">
+          <h3><i>Così fan tutte</i> — Opera Queensland, 2023</h3>
+          <p>“Jeremy Kleeman as Guglielmo complements his golden voice with engaging acting throughout ... his self-congratulation was perfect”</p>
+          <p class="reviewer">— Nicholas Routley, <em>Australian Stage</em></p>
         </div>
       </div>
 
       <!-- Slide 2 -->
-      <div class="carousel-item"
-           data-title="Le nozze di Figaro — State Opera of South Australia, 2023"
-           data-quote="“Jeremy Kleeman is the perfect Figaro ... he brings youth and physical energy to the role. His baritone is velvety smooth, and he literally leaps around the stage alternatively causing and escaping trouble” — Barry Hill OAM, Stage Whispers">
-        <img src="images/FigaroSOSA2.jpg" class="d-block w-100" alt="Le nozze di Figaro">
-        <div class="carousel-caption d-none d-md-block">
-          <h5><i>Le nozze di Figaro</i> — State Opera of South Australia, 2023</h5>
-          <p>“Jeremy Kleeman is the perfect Figaro ... he brings youth and physical energy to the role. His baritone is velvety smooth, and he literally leaps around the stage alternatively causing and escaping trouble” — Barry Hill OAM, Stage Whispers</p>
+      <div class="carousel-item">
+        <picture>
+          <source media="(max-width: 767px)" srcset="images/FigaroSOSA2-mobile.jpg">
+          <img src="images/FigaroSOSA2.jpg" class="carousel-img" alt="Le nozze di Figaro — State Opera SA">
+        </picture>
+        <div class="review-caption">
+          <h3><i>Le nozze di Figaro</i> — State Opera of South Australia, 2023</h3>
+          <p>“Jeremy Kleeman is the perfect Figaro ... he brings youth and physical energy to the role. His baritone is velvety smooth”</p>
+          <p class="reviewer">— Barry Hill OAM, <em>Stage Whispers</em></p>
         </div>
       </div>
 
       <!-- Slide 3 -->
-      <div class="carousel-item"
-           data-title="HMS Pinafore — State Opera of South Australia, 2023"
-           data-quote="“Jeremy Kleeman's wit, energy and constant focus power his performance. He can act, he can move and he can sing. From his surprise first appearance, when he declares “I am the captain of the Pinafore”, his vocal worth is evident, with clear, precise articulation and warmly resonant tone.  His Act 2 opener, “Fair moon, to thee I sing”, shows off his excellent legato line. Kleeman is a very fine artist” — Pat Wilson, Glam Adelaide">
-        <img src="images/CorcoranSOSA.jpg" class="d-block w-100" alt="HMS Pinafore">
-        <div class="carousel-caption d-none d-md-block">
-          <h5><i>HMS Pinafore</i> — State Opera of South Australia, 2023</h5>
-          <p>“Jeremy Kleeman's wit, energy and constant focus power his performance. He can act, he can move and he can sing. From his surprise first appearance, when he declares “I am the captain of the Pinafore”, his vocal worth is evident, with clear, precise articulation and warmly resonant tone.  His Act 2 opener, “Fair moon, to thee I sing”, shows off his excellent legato line. Kleeman is a very fine artist” — Pat Wilson, Glam Adelaide</p>
+      <div class="carousel-item">
+        <picture>
+          <source media="(max-width: 767px)" srcset="images/CorcoranSOSA-mobile.jpg">
+          <img src="images/CorcoranSOSA.jpg" class="carousel-img" alt="HMS Pinafore — State Opera SA">
+        </picture>
+        <div class="review-caption">
+          <h3><i>HMS Pinafore</i> — State Opera of South Australia, 2023</h3>
+          <p>“Jeremy Kleeman's wit, energy and constant focus power his performance. He can act, he can move and he can sing.”</p>
+          <p class="reviewer">— Pat Wilson, <em>Glam Adelaide</em></p>
         </div>
       </div>
 
     </div>
+
+    <!-- Controls -->
     <button class="carousel-control-prev" type="button" data-bs-target="#reviewCarousel" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
@@ -98,35 +107,37 @@
     </button>
   </div>
 
-  <!-- ==================== MOBILE REVIEW TEXT (auto-filled from carousel) ==================== -->
-  <div class="container d-md-none phonetext mt-4">
-    <div id="mobileReview" class="text-center">
-      <!-- Filled by JS -->
-    </div>
+  <!-- MOBILE REVIEW TEXT (auto-synced) -->
+  <div class="container d-md-none mt-4 px-4">
+    <div id="mobileReview" class="text-center phonetext"></div>
   </div>
 </div>
 
-<!-- Bootstrap JS (at end) -->
+<!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
-<!-- Auto-update mobile text -->
+<!-- Sync mobile text -->
 <script>
   const carousel = document.getElementById('reviewCarousel');
   const mobileReview = document.getElementById('mobileReview');
 
   function updateMobileReview() {
-    const activeItem = carousel.querySelector('.carousel-item.active');
-    const title = activeItem.getAttribute('data-title');
-    const quote = activeItem.getAttribute('data-quote');
-    mobileReview.innerHTML = `<p class="minititle"><i>${title.split(' — ')[0]}</i> — ${title.split(' — ')[1]}</p><p>${quote}</p><hr>`;
+    const active = carousel.querySelector('.carousel-item.active');
+    const title = active.querySelector('h3').innerHTML;
+    const quote = active.querySelector('p:not(.reviewer)').innerHTML;
+    const reviewer = active.querySelector('.reviewer').innerHTML;
+    mobileReview.innerHTML = `
+      <p class="minititle mb-2">${title}</p>
+      <p class="mb-2">${quote}</p>
+      <p class="reviewer text-muted small">${reviewer}</p>
+      <hr class="my-4 opacity-25">
+    `;
   }
 
   carousel.addEventListener('slid.bs.carousel', updateMobileReview);
-  updateMobileReview(); // Initial
+  updateMobileReview();
 </script>
 
 </body>
 </html>
-
-
